;Judge/Temporary_Error/184.log
./temp/184/code.cpp:35:1: error: 'About' does not name a type
 About FAQ
 ^
